Fixed 3JS display on mobile

--- a/src/styles/Three.module.sass
+++ b/src/styles/Three.module.sass
@@ -2,4 +2,5 @@
   position: fixed
   top: 0
   left: 0
-  height: 100%
+  min-height: 100vh
+  min-width: 100vh
